<resources>
    <string name="app_name">FinalProjectApp</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name">name</string>
    <string name="Name">Name</string>
    <string name="add_an_item">Add Item</string>
    <string name="add_to_list">Add To List</string>
    <string name="remove">Remove</string>
    <string name="add">Add</string>
    <string name="list">List</string>
    <string name="delete_an_item">Delete An Item</string>
    <string name="delete">Delete</string>
    <string name="to_do_list">To Do List</string>
</resources>
