<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".deletescreen">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:layout_marginTop="0dp"
            android:text="@string/delete_an_item"
            android:textAlignment="center"
            android:textSize="40sp" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/deletetext"
            android:layout_width="match_parent"
            android:layout_height="68dp"
            android:hint="@string/Name" />

        <Button
            android:id="@+id/DeleteButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/delete" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>