<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddScreen">

    <!-- TODO: Update blank fragment layout -->


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="60dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_to_list"
            android:textAlignment="center"
            android:textSize="40sp" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/NameForAdd"
            android:layout_width="match_parent"
            android:layout_height="68dp"
            android:hint="@string/name" />


        <Button
            android:id="@+id/AddItemSubmitButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_an_item" />


    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>